Prevent wrapping of text in explorer

--- a/src/styles/widgets/widgets.explorer.less
+++ b/src/styles/widgets/widgets.explorer.less
@@ -16,6 +16,8 @@
     height: 32px;
     cursor: pointer;
     user-select: none;
+    white-space: nowrap;
+    overflow: hidden;
 
     .k-in {
         line-height: 30px;
